--- a/polaris-frontend/src/components/events/eventspage.module.css
+++ b/polaris-frontend/src/components/events/eventspage.module.css
@@ -1,4 +1,3 @@
-/* EventsPage.module.css */
 .eventsContainer {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -30,7 +29,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
-    color: white;
+    color: blueviolet;
     display: flex;
     justify-content: center;
     align-items: center;
