--- a/polaris-frontend/src/components/events/eventspage.module.css
+++ b/polaris-frontend/src/components/events/eventspage.module.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white; /* Adjust this for dark mode or styling preference */
+  background-color: #eb7825  ; /* Adjust this for dark mode or styling preference */
   padding: 10px;
   z-index: 1000; /* Ensure it stays above other content */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional shadow */
@@ -63,7 +63,7 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.8);
-  color: blueviolet;
+  color: #eb7825  ;
   display: flex;
   justify-content: center;
   align-items: center;
